# smartshipyard

./: 2.py  3.py  4.py  5.py  README.md  app.py  main.py  ontology.py  pyproject.toml  smart_shipyard.owl  testwithllm.py
lgit/: ontology.owl  qwen35.py  readme.md  report.md
