[project]
name = "smartshipyard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-dev-cli",
    "allow>=0.0.3",
    "debugpy>=1.8.17",
    "flask>=3.1.2",
    "matplotlib>=3.10.9",
    "np>=1.0.2",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "owlready2>=0.48",
    "pandas>=3.0.2",
    "python-dotenv>=1.1.1",
    "rdflib>=7.6.0",
]
